--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: lisp
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y cgroup-bin mercurial g++ make python flex bison g++-multilib
+  - sudo apt-get install -y mercurial g++ make python flex bison g++-multilib
+  - which cgexec || sudo apt-get install -y cgroup-bin
 
 install:
   - make
